# nautilus-age-extension

./: .gitignore  LICENSE  QUICKSTART_ES.md  README.md  age-nautilus-extension.py  age-wrapper.sh  install-age-nautilus.sh  install.sh  nautilus-age-extension.py  pyproject.toml  test-age-nautilus.sh  test.sh  uninstall-age-nautilus.sh
